// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CInputGroup customize 1`] = `
<div>
  <div
    class="input-group input-group-lg bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CInputGroup component 1`] = `
<div>
  <div
    class="input-group"
  >
    Test
  </div>
</div>
`;
